--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,44 +6,92 @@
     scroll-behavior: smooth;
 }
 
+:root{
+    --bg-color: #1e1e1e;
+    --text-color: #fff;
+    --suggestions-bg-color: rgba(68, 68, 68, 0.8);
+    --suggestions-border-color: #777;
+    --border-color: #444;
+    --search-icon-color: #fff;
+
+    --light-mode-bg-color: #fff;
+    --light-mode-text-color: #000;
+    --light-mode-suggestions-bg-color: rgba(230, 230, 230, 0.8);
+    --light-mode-suggestions-border-color: #ccc;
+    --light-mode-border-color: #ccc;
+    --light-mode-search-icon-color: #000;
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
+body.light-mode{
+    --bg-color: var(--light-mode-bg-color);
+    --text-color: var(--light-mode-text-color);
+    --suggestions-bg-color: var(--light-mode-suggestions-bg-color);
+    --suggestions-border-color: var(--light-mode-suggestions-border-color);
+    --border-color: var(--light-mode-border-color);
+    --search-icon-color: var(--light-mode-search-icon-color);
+}
+
+body{
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
 .loading-movies-container,
-.movies-container{
+.movies-container {
     max-width: 90%;
     display: flex;
     flex-wrap: wrap;
-    gap: 3vw;
-    padding: 20px;
     justify-content: center;
-    align-items: center;
+    gap: 3vw;
     margin: 0 auto;
-    margin-bottom: 30px;
 }
 
-.movie-image{
+.movie-image-container {
     width: 220px;
     height: 280px;
+    border-radius: 10px;
+    overflow: hidden;
+    background: linear-gradient(to bottom right, rgba(118, 118, 118, 0.2), rgba(48, 49, 49, 0.6));
+}
+
+.movie-image {
+    width: 100%;
+    height: 100%;
     object-fit: fill;
-    border-radius: 10px;
 }
 
-.loading-movie{
+.loading-movie-text,
+.movie-title {
+    font-size: clamp(14px, 2vw, 16px);
+    font-weight: 600;
+    text-align: center;
+    max-width: 220px;
+    margin-top: 14px;
+    color: var(--text-color);
+}
+
+.loading-movie {
     width: 220px;
     height: 280px;
     border-radius: 10px;
-    outline: 1px solid #000;
+    outline: 1px solid var(--text-color);
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
-.movie-container{
+.movie-container {
     display: inline-block;
     position: relative;
     cursor: pointer;
 }
 
-.movie-content{
+.movie-content {
 
     --transform-value: -20%;
 
@@ -59,81 +107,228 @@
     transform-origin: left top;
     transition: all 0.5s ease-in-out;
     overflow: hidden;
-    height: 350px;
-    width: 380px;
+    height: 320px;
+    width: 420px;
+    background-color: #F8AD69;
     background-size: cover;
-    background-position: 30%;
+    background-position: bottom;
     background-repeat: no-repeat;
 }
 
-.movie-content-overlay{
+.movie-content-overlay {
     position: absolute;
     bottom: 0;
     left: 0;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
-    color: #fff;
+    color: var(--text-color);
     display: flex;
     flex-direction: column;
 
     --padding-left: 15px;
 }
 
-.title{
-    font-size: 26px;
+.title {
+    font-size: clamp(16px, 2vw, 26px);
     font-weight: 600;
     padding-left: var(--padding-left);
     padding-block: 10px;
 }
 
-.movie-info{
+.movie-info {
     display: flex;
     align-items: center;
-    font-size: 12px;
+    font-size: clamp(12px, 2vw, 14px);
     padding-left: var(--padding-left);
 }
 
-.movie-info > h3::after{
+.movie-info>h3::after {
     content: "•";
     margin-inline: 8px;
 }
 
-.movie-info > h3:last-child::after{
+.movie-info>h3:last-child::after {
     display: none;
 }
 
-.movie-overview{
-    font-size: 12px;
+.movie-overview {
+    font-size: clamp(12px, 2vw, 14px);
     max-width: 90%;
     padding-bottom: 20px;
     padding-left: var(--padding-left);
 }
 
-.movie-container:hover .movie-image{
+.movie-container:hover .movie-image {
     transition-delay: 0.1s;
     opacity: 0;
 }
 
-.movie-container:hover .movie-content{
+.movie-container:hover .movie-content {
     opacity: 1;
     transform: scale(1) translate(var(--transform-value));
 }
 
-.load-more-button{
+.load-more-button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: clamp(30px, 6vw, 50px);
+    margin-bottom: clamp(40px, 5vw, 30px);
+}
+
+.load-more-button {
     padding: 10px 20px;
     border: none;
     cursor: pointer;
-    outline: 1px solid #000;
+    outline: 1px solid var(--text-color);
+    color: var(--text-color);
     background-color: transparent;
     border-radius: 5px;
     font-size: 16px;
     font-weight: 600;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 50%;
-    transform: translateX(-50%);
 }
 
-.text-center{
+.page-title {
+    margin-block: 30px 40px;
     text-align: center;
-    margin-block: 30px;
+}
+
+.video-container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    padding-block: 12px;
+    padding-inline: 12vw;
+    border-bottom: 1px solid var(--border-color);
+}
+
+.header-left{
+    display: flex;
+    align-items: center;
+}
+
+.logo{
+    cursor: pointer;
+    width: 120px;
+}
+
+.header-right{
+    width: max-content;
+    position: relative;
+}
+
+.search-input{
+    border: none;
+    outline: none;
+    background-color: var(--suggestions-bg-color);
+    color: var(--text-color);
+    padding: 10px 15px;
+    border-radius: 5px;
+    min-width: 320px;
+}
+
+.search-icon{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 2rem;
+    height: 100%;
+    padding: 6px;
+    padding-right: 10px;
+    cursor: pointer;
+}
+
+.search-icon path{
+    stroke: var(--search-icon-color);
+}
+
+.suggestions-container{
+    position: absolute;
+    top: 110%;
+    width: 100%;
+    background-color: var(--suggestions-bg-color);
+    box-shadow: 0 0 10px 0 rgba(var(--bg-color), 0.5);
+    border-radius: 5px;
+    z-index: 100;
+}
+
+.suggestions-list{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.suggestion-item{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    color: var(--text-color);
+    text-decoration: none;
+    border-bottom: 1px solid var(--suggestions-border-color);
+}
+
+.suggestion-image{
+    width: 50px;
+    height: 70px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.suggestion-title{
+    font-size: clamp(12px, 1.5vw, 14px);
+    font-weight: 600;
+    margin-left: 15px;
+}
+
+.suggestion-year{
+    font-size: clamp(12px, 1.5vw, 14px);
+}
+
+
+@media (max-width: 768px) {
+    .header{
+        padding-inline: 5vw;
+    }
+
+    .loading-movies-container,
+    .movies-container {
+        width: 100%;
+    }
+
+    .loading-movie,
+    .movie-image-container {
+        width: 140px;
+        height: 180px;
+        margin: 0 8px;
+    }
+
+    .movie-title {
+        max-width: 160px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .video-container {
+        height: 60vh;
+    }
+}
+
+@media (max-width: 480px) {
+    .header{
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+    .search-input{
+        width: 80vw;
+    }
 }
