--- a/src/style.css
+++ b/src/style.css
@@ -141,13 +141,21 @@ body{
     padding-left: var(--padding-left);
 }
 
-.movie-info>h3::after {
-    content: "•";
+.separator{
+    font-size: 30px;
+    color: var(--text-color);
     margin-inline: 8px;
 }
 
 .movie-info>h3:last-child::after {
     display: none;
+}
+
+.star-icon{
+    margin-left: 3px;
+    height: 16px;
+    width: 16px;
+    transform: translateY(2px);
 }
 
 .movie-overview {
@@ -290,6 +298,56 @@ body{
 
 .suggestion-year{
     font-size: clamp(12px, 1.5vw, 14px);
+}
+
+.home-movie-list{
+    margin: 30px;
+    position: relative;
+}
+
+.home-movie-list h1{
+    display: inline-block;
+    font-size: clamp(16px, 2vw, 22px);
+    font-weight: 600;
+}
+
+.home-movie-list h4{
+    position: absolute;
+    top: 0;
+    right: 10px;
+    display: inline-block;
+    font-size: clamp(12px, 1.4vw, 18px);
+    font-weight: 600;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.home-movie-list h4 svg{
+    height: 10px;
+    width: 10px;
+    margin-top: 5px;
+    margin-left: 5px;
+}
+
+.home-movie-list-container{
+    display: flex;
+    gap: 3vw;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-snap-align: start;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    margin-top: 20px;
+}
+
+.home-movie-list-container .movie-container .movie-content {
+    transform: scale(0) translateX(0%);
+}
+
+.home-movie-list-container .movie-container:hover .movie-content {
+    transform: scale(1) translateX(0%);
 }
 
 
